--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@types/node": "^22.15.14",
+		"autoprefixer": "^10.4.21",
 		"esbuild": "^0.25.4",
+		"postcss": "^8.5.3",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.1.5",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.5",
-		"tailwindcss": "^4.1.5"
+		"daisyui": "^5.0.35"
 	}
 }
